#143 use a URI so we can parse tcp URIs from activemq nicely without failing ;)